--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "note",
   "private": true,
-  "version": "0.1.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -12,10 +12,12 @@
     "tauri:dev": "tauri dev"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.14",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "tailwindcss": "^4.1.14",
     "xterm": "^5.3.0",
     "xterm-addon-fit": "^0.8.0"
   },
